<resources>
    <string name="app_name">Calculator</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_AC">AC</string>
    <string name="button_delete">DEL</string>
    <string name="button_mod">%</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">x</string>
    <string name="button_subtract">-</string>
    <string name="button_summary">+</string>
    <string name="button_result">=</string>
    <string name="button_point">.</string>
    <string name="button_convert">conv</string>
</resources>