<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_clear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFC"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:background="@color/black"
        android:gravity="bottom"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clean"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#BEBEBE	"
                android:onClick="allClearOnClick"
                android:text="@string/button_AC"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#A9A9A9	"
                android:onClick="DelOnClick"
                android:text="@string/button_delete"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_mod"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#909090	"
                android:onClick="modOnClick"
                android:text="@string/button_mod"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_divide"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#909090	"
                android:onClick="divideOnClick"
                android:text="@string/button_divide"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="sevenOnClick"
                android:text="@string/button_7"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="eightOnClick"
                android:text="@string/button_8"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="nineOnClick"
                android:text="@string/button_9"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_multiply"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#909090	"
                android:onClick="multiplyOnClick"
                android:text="@string/button_multiply"
                android:textAllCaps="false"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="fourOnClick"
                android:text="@string/button_4"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="fiveOnClick"
                android:text="@string/button_5"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="sixOnClick"
                android:text="@string/button_6"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_subtract"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#909090	"
                android:onClick="minusOnClick"
                android:text="@string/button_subtract"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="oneOnClick"
                android:text="@string/button_1"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="twoOnClick"
                android:text="@string/button_2"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="threeOnClick"
                android:text="@string/button_3"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_sum"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#909090	"
                android:onClick="plusOnClick"
                android:text="@string/button_summary"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_point"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="85dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="dotOnClick"
                android:text="@string/button_point"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#D3D3D3	"
                android:onClick="zeroOnClick"
                android:text="@string/button_0"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_result"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="6"
                android:background="#707070	"
                android:onClick="equalsOnClick"
                android:text="@string/button_result"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <TextView
        android:id="@+id/textView_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/myNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Beyza Cevrim"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />


</androidx.constraintlayout.widget.ConstraintLayout>